--- a/custom_components/daikin_residential_altherma/translations/de.json
+++ b/custom_components/daikin_residential_altherma/translations/de.json
@@ -25,7 +25,7 @@
                 "state_attributes": {
                     "fan_mode": {
                         "state": {
-                            "quiet": "Quiet",
+                            "quiet": "Leise",
                             "1": "1",
                             "2": "2",
                             "3": "3",
