Migrate to daikin_onecta
    * .github/ISSUE_TEMPLATE/issue_report.md:
    * custom_components/daikin_residential_altherma/__init__.py:
    * custom_components/daikin_residential_altherma/const.py:
    * custom_components/daikin_residential_altherma/daikin_api.py:
    * custom_components/daikin_residential_altherma/daikin_base.py:
    * custom_components/daikin_residential_altherma/device.py:
    * custom_components/daikin_residential_altherma/manifest.json:
    * custom_components/daikin_residential_altherma/strings.json:
    * custom_components/daikin_residential_altherma/translations/en.json:
    * custom_components/daikin_residential_altherma/translations/it.json:
    * custom_components/daikin_residential_altherma/translations/nl.json:
    * custom_components/daikin_residential_altherma/translations/sk.json:
    * hacs.json:
    * readme.md:

--- a/custom_components/daikin_residential_altherma/translations/en.json
+++ b/custom_components/daikin_residential_altherma/translations/en.json
@@ -21,7 +21,7 @@
                     "password": "Password"
                 },
                 "description": "Enter the email address and password you use to login to Daikin Cloud, then press Submit.",
-                "title": "Configure Daikin Residential Controller AC"
+                "title": "Configure Daikin Onecta"
             }
         }
     },
