--- a/custom_components/daikin_residential_altherma/translations/nl.json
+++ b/custom_components/daikin_residential_altherma/translations/nl.json
@@ -10,7 +10,7 @@
                     "password": "Wachtwoord"
                 },
                 "description": "Voer het email adres en wachtwoord in voor het inloggen bij Daikin.",
-                "title": "Daikin Residential Controller AC instellen"
+                "title": "Daikin Onecta instellen"
             }
         }
     },
