--- a/custom_components/daikin_residential_altherma/translations/sk.json
+++ b/custom_components/daikin_residential_altherma/translations/sk.json
@@ -21,7 +21,7 @@
                     "password": "Heslo"
                 },
                 "description": "Zadajte e-mailovú adresu a heslo, ktoré používate na prihlásenie do Daikin Cloud, a potom stlačte Odoslať.",
-                "title": "Konfigurácia Daikin Residential Controller AC"
+                "title": "Konfigurácia Daikin Onecta"
             }
         }
     },
