Starting with config flow, gives an error 500, more next week
    * custom_components/daikin_onecta/config_flow.py:
    * custom_components/daikin_onecta/strings.json:
    * custom_components/daikin_onecta/translations/en.json:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -1,4 +1,13 @@
 {
+    "options": {
+        "step": {
+        "user": {
+            "data": {
+            "scan_interval": "Update interval (seconds)"
+            }
+        }
+        }
+    },
     "config": {
         "abort": {
             "already_configured": "The integration is already configured.",
