--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -1,11 +1,15 @@
 {
     "options": {
         "step": {
-        "user": {
-            "data": {
-            "scan_interval": "Update interval (seconds)"
+            "init": {
+                "data": {
+                    "high_scan_interval": "High frequency period update interval (seconds)",
+                    "low_scan_interval": "Low frequency period update interval (seconds)",
+                    "high_scan_start": "High frequency period start time",
+                    "low_scan_start": "High frequency period start time",
+                    "scan_ignore": "Number of seconds that a data refresh is ignored after a command"
+                }
             }
-        }
         }
     },
     "config": {
