Work on options
    * custom_components/daikin_onecta/config_flow.py:
    * custom_components/daikin_onecta/coordinator.py:
    * custom_components/daikin_onecta/translations/en.json:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -8,7 +8,9 @@
                     "high_scan_start": "High frequency period start time",
                     "low_scan_start": "High frequency period start time",
                     "scan_ignore": "Number of seconds that a data refresh is ignored after a command"
-                }
+                },
+                "description": "Configure Daikin Onecta Cloud polling",
+                "title": "Daikin Onecta"
             }
         }
     },
