--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -3,8 +3,8 @@
         "step": {
             "init": {
                 "data": {
-                    "high_scan_interval": "High frequency period update interval (seconds)",
-                    "low_scan_interval": "Low frequency period update interval (seconds)",
+                    "high_scan_interval": "High frequency period update interval (minutes)",
+                    "low_scan_interval": "Low frequency period update interval (minutes)",
                     "high_scan_start": "High frequency period start time",
                     "low_scan_start": "High frequency period start time",
                     "scan_ignore": "Number of seconds that a data refresh is ignored after a command"
