Updated translation key
    * custom_components/daikin_onecta/climate.py:
    * custom_components/daikin_onecta/translations/de.json:
    * custom_components/daikin_onecta/translations/en.json:
    * custom_components/daikin_onecta/translations/nl.json:

--- a/custom_components/daikin_onecta/translations/de.json
+++ b/custom_components/daikin_onecta/translations/de.json
@@ -21,7 +21,7 @@
   },
   "entity": {
     "climate": {
-      "daikin": {
+      "daikin_onecta": {
         "state_attributes": {
           "fan_mode": {
             "state": {
