--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -48,7 +48,7 @@
   },
   "entity": {
     "climate": {
-      "daikin": {
+      "daikin_onecta": {
         "state_attributes": {
           "fan_mode": {
             "state": {
