--- a/custom_components/daikin_onecta/translations/fr.json
+++ b/custom_components/daikin_onecta/translations/fr.json
@@ -1,4 +1,19 @@
 {
+  "options": {
+    "step": {
+      "init": {
+        "data": {
+          "high_scan_interval": "High frequency period update interval (minutes)",
+          "low_scan_interval": "Low frequency period update interval (minutes)",
+          "high_scan_start": "High frequency period start time",
+          "low_scan_start": "Low frequency period start time",
+          "scan_ignore": "Number of seconds that a data refresh is ignored after a command"
+        },
+        "description": "Configure Daikin Onecta Cloud polling",
+        "title": "Daikin Onecta"
+      }
+    }
+  },
   "config": {
     "abort": {
       "already_configured": "L'appareil est d\u00e9j\u00e0 configur\u00e9",
