Try to translate the entity names, doesn't work for some reason
    * custom_components/daikin_onecta/binary_sensor.py:
    * custom_components/daikin_onecta/const.py:
    * custom_components/daikin_onecta/strings.json:
    * custom_components/daikin_onecta/translations/en.json:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -41,6 +41,11 @@
     }
   },
   "entity": {
+    "binary_sensor": {
+      "isInWarningState": {
+        "name": "FOO"
+      }
+    },
     "climate": {
       "daikin_onecta": {
         "state_attributes": {
