Translation keys must be all lower case
    * custom_components/daikin_onecta/binary_sensor.py:
    * custom_components/daikin_onecta/strings.json:
    * custom_components/daikin_onecta/translations/en.json:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -42,7 +42,7 @@
   },
   "entity": {
     "binary_sensor": {
-      "isInWarningState": {
+      "isinwarningstate": {
         "name": "FOO"
       }
     },
