--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -43,7 +43,7 @@
   "entity": {
     "binary_sensor": {
       "isinwarningstate": {
-        "name": "FOO"
+        "name": "Thermostat mode"
       }
     },
     "climate": {
