Add translation key, no idea why it doens't work
    * custom_components/daikin_onecta/binary_sensor.py:
    * custom_components/daikin_onecta/sensor.py:
    * custom_components/daikin_onecta/translations/en.json:
    * tests/snapshots/test_init.ambr:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -42,8 +42,8 @@
   },
   "entity": {
     "binary_sensor": {
-      "isinwarningstate": {
-        "name": "Thermostat mode"
+      "climatecontrol_isinwarningstate": {
+        "name": "Climate Control Warning State"
       }
     },
     "climate": {
