Add swing mode translations
    * custom_components/daikin_onecta/translations/en.json:
    * custom_components/daikin_onecta/translations/nl.json:

--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -42,6 +42,14 @@
               "4": "4",
               "5": "5"
             }
+          },
+          "swing_mode": {
+            "state": {
+              "floorHeatingAirflow": "Vloer Heating Airflow",
+              "floorHeatingAirflow and Horizontal": "Vloer Heating Airflow en Horizontaal",
+              "Comfort Airflow": "Comfort Airflow",
+              "Comfort Airflow and Horizontal": "Comfort Airflow en Horizontaal"
+            }
           }
         }
       }
