--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -58,6 +58,14 @@
               "4": "4",
               "5": "5"
             }
+          },
+          "swing_mode": {
+            "state": {
+              "floorHeatingAirflow": "FloorHeating Airflow",
+              "floorHeatingAirflow and Horizontal": "FloorHeating Airflow and Horizontal",
+              "Comfort Airflow": "Comfort Airflow",
+              "Comfort Airflow and Horizontal": "Comfort Airflow and Horizontal"
+            }
           }
         }
       }
