Removed spaces from swing modes so that they can be translated
    * custom_components/daikin_onecta/climate.py:
    * custom_components/daikin_onecta/translations/en.json:
    * custom_components/daikin_onecta/translations/nl.json:
    * tests/snapshots/test_init.ambr:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -62,9 +62,9 @@
           "swing_mode": {
             "state": {
               "floorHeatingAirflow": "FloorHeating Airflow",
-              "floorHeatingAirflow and Horizontal": "FloorHeating Airflow and Horizontal",
-              "Comfort Airflow": "Comfort Airflow",
-              "Comfort Airflow and Horizontal": "Comfort Airflow and Horizontal"
+              "floorHeatingAirflowHorizontal": "FloorHeating Airflow and Horizontal",
+              "ComfortAirflow": "Comfort Airflow",
+              "ComfortAirflowHorizontal": "Comfort Airflow and Horizontal"
             }
           }
         }
