--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -46,9 +46,9 @@
           "swing_mode": {
             "state": {
               "floorHeatingAirflow": "Vloer Heating Airflow",
-              "floorHeatingAirflow and Horizontal": "Vloer Heating Airflow en Horizontaal",
-              "Comfort Airflow": "Comfort Airflow",
-              "Comfort Airflow and Horizontal": "Comfort Airflow en Horizontaal"
+              "floorHeatingAirflowHorizontal": "Vloer Heating Airflow en Horizontaal",
+              "ComfortAirflow": "Comfort Airflow",
+              "ComfortAirflowHorizontal": "Comfort Airflow en Horizontaal"
             }
           }
         }
