Translation keys may only contain lower case
    * custom_components/daikin_onecta/climate.py:
    * custom_components/daikin_onecta/const.py:
    * custom_components/daikin_onecta/translations/en.json:
    * custom_components/daikin_onecta/translations/nl.json:
    * tests/snapshots/test_init.ambr:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -61,10 +61,10 @@
           },
           "swing_mode": {
             "state": {
-              "floorHeatingAirflow": "FloorHeating Airflow",
-              "floorHeatingAirflowHorizontal": "FloorHeating Airflow and Horizontal",
-              "ComfortAirflow": "Comfort Airflow",
-              "ComfortAirflowHorizontal": "Comfort Airflow and Horizontal"
+              "floor": "FloorHeating Airflow",
+              "floor_horizontal": "FloorHeating Airflow and Horizontal",
+              "comfort": "Comfort Airflow",
+              "comfort_horizontal": "Comfort Airflow and Horizontal"
             }
           }
         }
