--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -45,10 +45,10 @@
           },
           "swing_mode": {
             "state": {
-              "floorHeatingAirflow": "Vloer Heating Airflow",
-              "floorHeatingAirflowHorizontal": "Vloer Heating Airflow en Horizontaal",
-              "ComfortAirflow": "Comfort Airflow",
-              "ComfortAirflowHorizontal": "Comfort Airflow en Horizontaal"
+              "floor": "Vloer Heating Airflow",
+              "floor_horizontal": "Vloer Heating Airflow en Horizontaal",
+              "comfort": "Comfort Airflow",
+              "comfort_horizontal": "Comfort Airflow en Horizontaal"
             }
           }
         }
