Untested changes to add horizontal swing mode to the Daikin Onecta integration, depends on https://github.com/home-assistant/core/pull/125578
    * custom_components/daikin_onecta/climate.py:
    * custom_components/daikin_onecta/const.py:
    * custom_components/daikin_onecta/icons.json:
    * custom_components/daikin_onecta/translations/el.json:
    * custom_components/daikin_onecta/translations/en.json:
    * custom_components/daikin_onecta/translations/nl.json:
    * custom_components/daikin_onecta/translations/sl.json:

--- a/custom_components/daikin_onecta/translations/el.json
+++ b/custom_components/daikin_onecta/translations/el.json
@@ -62,9 +62,7 @@
           "swing_mode": {
             "state": {
               "floor": "Ροή Αέρα Θέρμανσης Δαπέδου",
-              "floor_horizontal": "Ροή Αέρα Θέρμανσης Δαπέδου και Οριζόντια",
-              "comfort": "Άνετη Ροή Αέρα",
-              "comfort_horizontal": "Άνετη Ροή Αέρα και Οριζόντια"
+              "windnice": "Άνετη Ροή Αέρα",
             }
           }
         }
