--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -46,9 +46,7 @@
           "swing_mode": {
             "state": {
               "floor": "Vloer Heating Airflow",
-              "floor_horizontal": "Vloer Heating Airflow en Horizontaal",
-              "comfort": "Comfort Airflow",
-              "comfort_horizontal": "Comfort Airflow en Horizontaal"
+              "windnice": "Comfort Airflow",
             }
           }
         }
