--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -62,9 +62,7 @@
           "swing_mode": {
             "state": {
               "floor": "FloorHeating Airflow",
-              "floor_horizontal": "FloorHeating Airflow and Horizontal",
-              "comfort": "Comfort Airflow",
-              "comfort_horizontal": "Comfort Airflow and Horizontal"
+              "windnice": "Comfort Airflow",
             }
           }
         }
