--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -61,8 +61,8 @@
           },
           "swing_mode": {
             "state": {
-              "floor": "FloorHeating Airflow",
-              "windnice": "Comfort Airflow",
+              "floorheatingairflow": "FloorHeating Airflow",
+              "windnice": "Comfort Airflow"
             }
           }
         }
