--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -45,7 +45,7 @@
           },
           "swing_mode": {
             "state": {
-              "floor": "Vloer Heating Airflow",
+              "floorheatingairflow": "Vloer Heating Airflow",
               "windnice": "Comfort Airflow",
             }
           }
