--- a/custom_components/daikin_onecta/translations/sl.json
+++ b/custom_components/daikin_onecta/translations/sl.json
@@ -62,7 +62,7 @@
           "swing_mode": {
             "state": {
               "floorheatingairflow": "Tlačni tok ogrevanja",
-              "windnice": "Tok udobja",
+              "windnice": "Tok udobja"
             }
           }
         }
