--- a/custom_components/daikin_onecta/translations/el.json
+++ b/custom_components/daikin_onecta/translations/el.json
@@ -61,7 +61,7 @@
           },
           "swing_mode": {
             "state": {
-              "floor": "Ροή Αέρα Θέρμανσης Δαπέδου",
+              "floorheatingairflow": "Ροή Αέρα Θέρμανσης Δαπέδου",
               "windnice": "Άνετη Ροή Αέρα",
             }
           }
