--- a/custom_components/daikin_onecta/translations/el.json
+++ b/custom_components/daikin_onecta/translations/el.json
@@ -62,7 +62,7 @@
           "swing_mode": {
             "state": {
               "floorheatingairflow": "Ροή Αέρα Θέρμανσης Δαπέδου",
-              "windnice": "Άνετη Ροή Αέρα",
+              "windnice": "Άνετη Ροή Αέρα"
             }
           }
         }
