--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -46,7 +46,7 @@
           "swing_mode": {
             "state": {
               "floorheatingairflow": "Vloer Heating Airflow",
-              "windnice": "Comfort Airflow",
+              "windnice": "Comfort Airflow"
             }
           }
         }
