--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -30,6 +30,11 @@
     }
   },
   "entity": {
+    "binary_sensor": {
+      "isinwarningstate": {
+        "name": "Is in waarschuwing status"
+      }
+    },
     "climate": {
       "roomtemperature": {
         "state_attributes": {
