--- a/custom_components/daikin_onecta/translations/de.json
+++ b/custom_components/daikin_onecta/translations/de.json
@@ -42,7 +42,7 @@
   },
   "entity": {
     "binary_sensor": {
-      "climatecontrol_isinwarningstate": {
+      "isinwarningstate": {
         "name": "Warnstatus der Klimaregelung"
       }
     },
