--- a/custom_components/daikin_onecta/translations/el.json
+++ b/custom_components/daikin_onecta/translations/el.json
@@ -42,7 +42,7 @@
   },
   "entity": {
     "binary_sensor": {
-      "climatecontrol_isinwarningstate": {
+      "isinwarningstate": {
         "name": "Κατάσταση Προειδοποίησης Ελέγχου Κλιματισμού"
       }
     },
