First steps to migrate to aiohttp
    * custom_components/daikin_onecta/const.py:
    * custom_components/daikin_onecta/daikin_api.py:
    * custom_components/daikin_onecta/translations/en.json:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -42,8 +42,14 @@
   },
   "entity": {
     "binary_sensor": {
-      "isinwarningstate": {
-        "name": "Is In Warning State"
+      "isinerrorstate": {
+        "name": "Is in error state"
+      },
+      "is_in_warning_state": {
+        "name": "Is in warning state"
+      },
+      "isininstallerstate": {
+        "name": "Is in installer state"
       }
     },
     "climate": {
