--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -43,7 +43,7 @@
   "entity": {
     "select": {
       "schedule": {
-        "schedule": "Schedule"
+        "name": "Schedule"
       }
     },
     "switch": {
