Add gas translations
    * custom_components/daikin_onecta/const.py:
    * custom_components/daikin_onecta/sensor.py:
    * custom_components/daikin_onecta/translations/en.json:
    * tests/snapshots/test_init.ambr:

--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -73,6 +73,24 @@
       "heatingyearlyelectricalconsumption": {
         "name": "Heating yearly electrical consumption"
       },
+      "coolingdailygasconsumption": {
+        "name": "Cooling daily gas consumption"
+      },
+      "coolingweeklygasconsumption": {
+        "name": "Cooling weekly gas consumption"
+      },
+      "coolingyearlygasconsumption": {
+        "name": "Cooling yearly gas consumption"
+      },
+      "heatingdailygasconsumption": {
+        "name": "Heating daily gas consumption"
+      },
+      "heatingweeklygasconsumption": {
+        "name": "Heating weekly gas consumption"
+      },
+      "heatingyearlygasconsumption": {
+        "name": "Heating yearly gas consumption"
+      },
       "ipaddress": {
         "name": "IP address"
       },
